After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705615 - Column number is wrong when tabs are used
Column number is wrong when tabs are used
Status: RESOLVED FIXED
Product: anjuta
Classification: Applications
Component: core application
3.8.x
Other Linux
: Normal minor
: ---
Assigned To: Naba Kumar
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-07 14:16 UTC by Michael Catanzaro
Modified: 2013-08-11 16:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Wrong column number (75.39 KB, image/png)
2013-08-07 14:16 UTC, Michael Catanzaro
  Details
Fix column number on lines with tabs (1.59 KB, patch)
2013-08-09 03:51 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2013-08-07 14:16:56 UTC
Created attachment 251075 [details]
Wrong column number

Anjuta counts a tab as a single character when computing the current column number.  A tab should count for its equivalent number of spaces (as in gedit/emacs/vim etc.).

The screenshot shows the cursor after a single tab character.  Anjuta reports that the cursor is in column 1, but it's actually at column 4.
Comment 1 Michael Catanzaro 2013-08-09 03:51:45 UTC
Created attachment 251216 [details] [review]
Fix column number on lines with tabs
Comment 2 Sébastien Granjoux 2013-08-11 16:28:33 UTC
Review of attachment 251216 [details] [review]:

Thank for finding that and for fixing it. I have committed your patch without any change.