Fix column number on lines with tabs

https://bugzilla.gnome.org/show_bug.cgi?id=705615